bindings/dart/lib/glint.dart


  /// Destroy the encoder and free native resources.
  void dispose() {
    if (!_disposed) {
      _aacDestroy(_handle);
      _disposed = true;
    }
  }

  void _checkNotDisposed() {
    if (_disposed) {
      throw StateError('GlintAacEncoder has been disposed');
    }
  }
}


// --- Opus codec (CELT encoder + full decoder) ---

typedef _OpusEncCreateNative = Pointer<Void> Function(Int32, Int32, Int32);
typedef _OpusEncCreate = Pointer<Void> Function(int, int, int);
typedef _OpusEncodeNative = Int32 Function(
    Pointer<Void>, Pointer<Float>, Int32, Pointer<Uint8>, Int32);
typedef _OpusEncode = int Function(
    Pointer<Void>, Pointer<Float>, int, Pointer<Uint8>, int);
typedef _OpusDecCreateNative = Pointer<Void> Function(Int32, Int32);
typedef _OpusDecCreate = Pointer<Void> Function(int, int);
typedef _OpusDecodeNative = Int32 Function(
    Pointer<Void>, Pointer<Uint8>, Int32, Pointer<Float>, Int32);
typedef _OpusDecode = int Function(
    Pointer<Void>, Pointer<Uint8>, int, Pointer<Float>, int);
typedef _OpusRangeNative = Uint32 Function(Pointer<Void>);
typedef _OpusRange = int Function(Pointer<Void>);
typedef _OpusDestroyNative = Void Function(Pointer<Void>);
typedef _OpusDestroy = void Function(Pointer<Void>);

/// CELT-only Opus encoder: 48 kHz interleaved float32 PCM in, complete
/// Opus packets out. Frame sizes 120/240/480/960 samples per channel.
class GlintOpusEncoder {
  late final DynamicLibrary _lib;
  late final Pointer<Void> _handle;
  final int channels;

  late final _OpusEncode _encode;
  late final _OpusRange _finalRange;
  late final _OpusDestroy _destroy;

  bool _disposed = false;

  GlintOpusEncoder({int channels = 2, int bitrate = 96000, bool vbr = false})
      : channels = channels {
    _lib = _loadLibrary();
    final create = _lib.lookupFunction<_OpusEncCreateNative, _OpusEncCreate>(
        'glint_opus_enc_create');
    _encode = _lib
        .lookupFunction<_OpusEncodeNative, _OpusEncode>('glint_opus_encode');
    _finalRange = _lib.lookupFunction<_OpusRangeNative, _OpusRange>(
        'glint_opus_enc_final_range');
    _destroy = _lib.lookupFunction<_OpusDestroyNative, _OpusDestroy>(
        'glint_opus_enc_destroy');
    _handle = create(channels, bitrate, vbr ? 1 : 0);
    if (_handle == nullptr) {
      throw StateError('glint_opus_enc_create returned null');
    }
  }

  /// Encode one frame of interleaved float PCM
  /// (frameSize * channels values; frameSize in {120, 240, 480, 960}).
  Uint8List encode(Float32List pcm) {
    _checkNotDisposed();
    final frame = pcm.length ~/ channels;
    final inPtr = calloc<Float>(pcm.length);
    inPtr.asTypedList(pcm.length).setAll(0, pcm);
    final outPtr = calloc<Uint8>(1500);
    final n = _encode(_handle, inPtr, frame, outPtr, 1500);
    Uint8List out;
    if (n <= 0) {
      out = Uint8List(0);
    } else {
      out = Uint8List.fromList(outPtr.asTypedList(n));
    }
    calloc.free(inPtr);
    calloc.free(outPtr);
    if (n < 0) {
      throw StateError('opus encode failed ($n)');
    }
    return out;
  }

  int finalRange() => _finalRange(_handle);

  void dispose() {
    if (!_disposed) {
      _destroy(_handle);
      _disposed = true;
    }
  }

  void _checkNotDisposed() {
    if (_disposed) throw StateError('GlintOpusEncoder has been disposed');
  }
}

/// Opus decoder (SILK/CELT/hybrid, PLC, SILK in-band FEC). Output rates
/// 48000/24000/16000/12000/8000; interleaved float32 PCM out.
class GlintOpusDecoder {
  late final DynamicLibrary _lib;
  late final Pointer<Void> _handle;
  final int channels;

  late final _OpusDecode _decode;
  late final _OpusDecode _decodeFec;
  late final _OpusRange _finalRange;
  late final _OpusDestroy _destroy;

  bool _disposed = false;

  GlintOpusDecoder({int channels = 2, int sampleRate = 48000})
      : channels = channels {
    _lib = _loadLibrary();
    final create = _lib.lookupFunction<_OpusDecCreateNative, _OpusDecCreate>(
        'glint_opus_dec_create');
    _decode = _lib
        .lookupFunction<_OpusDecodeNative, _OpusDecode>('glint_opus_decode');
    _decodeFec = _lib.lookupFunction<_OpusDecodeNative, _OpusDecode>(
        'glint_opus_decode_fec');
    _finalRange = _lib.lookupFunction<_OpusRangeNative, _OpusRange>(
        'glint_opus_dec_final_range');
    _destroy = _lib.lookupFunction<_OpusDestroyNative, _OpusDestroy>(
        'glint_opus_dec_destroy');
    _handle = create(channels, sampleRate);
    if (_handle == nullptr) {
      throw StateError('glint_opus_dec_create returned null');
    }
  }

  /// Decode one packet; returns interleaved float PCM.
  Float32List decode(Uint8List packet) {
    _checkNotDisposed();
    final inPtr = calloc<Uint8>(packet.length);
    inPtr.asTypedList(packet.length).setAll(0, packet);
    final outPtr = calloc<Float>(2 * 5760);
    final n = _decode(_handle, inPtr, packet.length, outPtr, 5760);
    Float32List out;
    if (n <= 0) {
      out = Float32List(0);
    } else {
      out = Float32List.fromList(outPtr.asTypedList(n * channels));
    }
    calloc.free(inPtr);
    calloc.free(outPtr);
    if (n < 0) {
      throw StateError('opus decode failed ($n)');
    }
    return out;
  }

  /// Conceal a LOST packet of [frameSize] samples per channel;
  /// [nextPacket] (the packet after the loss) supplies SILK in-band FEC
  /// when present.
  Float32List decodeLost(int frameSize, [Uint8List? nextPacket]) {
    _checkNotDisposed();
    final outPtr = calloc<Float>(2 * 5760);
    int n;
    if (nextPacket != null && nextPacket.isNotEmpty) {
      final inPtr = calloc<Uint8>(nextPacket.length);
      inPtr.asTypedList(nextPacket.length).setAll(0, nextPacket);
      n = _decodeFec(_handle, inPtr, nextPacket.length, outPtr, frameSize);
      calloc.free(inPtr);
    } else {
      n = _decodeFec(_handle, nullptr, 0, outPtr, frameSize);
    }
    Float32List out;
    if (n <= 0) {
      out = Float32List(0);
    } else {
      out = Float32List.fromList(outPtr.asTypedList(n * channels));
    }
    calloc.free(outPtr);
    if (n < 0) {
      throw StateError('opus concealment failed ($n)');
    }
    return out;
  }

  int finalRange() => _finalRange(_handle);

  void dispose() {
    if (!_disposed) {
      _destroy(_handle);
      _disposed = true;
    }
  }

  void _checkNotDisposed() {
    if (_disposed) throw StateError('GlintOpusDecoder has been disposed');
  }
}


// --- MP3 + AAC-LC decoders ---

final class GlintDecFrameInfo extends Struct {
  @Int32()
  external int sampleRate;
  @Int32()
  external int channels;
  @Int32()
  external int samples;
  @Int32()
  external int frameBytes;
}

typedef _DecCreateNative = Pointer<Void> Function();
typedef _DecCreate = Pointer<Void> Function();
typedef _DecodeNative = Int32 Function(Pointer<Void>, Pointer<Uint8>, Int32,
    Pointer<Float>, Pointer<GlintDecFrameInfo>);
typedef _Decode = int Function(Pointer<Void>, Pointer<Uint8>, int,
    Pointer<Float>, Pointer<GlintDecFrameInfo>);
typedef _FrameInfoNative = Int32 Function(
    Pointer<Uint8>, Int32, Pointer<GlintDecFrameInfo>);
typedef _FrameInfo = int Function(
    Pointer<Uint8>, int, Pointer<GlintDecFrameInfo>);

/// Shared MP3/AAC decoder frontend. Feed a whole stream to [decode] or
/// one frame at a time to [decodeFrame]; output is interleaved float PCM.
abstract class _FrameDecoder {
  late final DynamicLibrary _lib;
  late final Pointer<Void> _handle;
  late final _Decode _decode;
  late final _FrameInfo _frameInfo;
  late final _DecCreate _create;
  late final void Function(Pointer<Void>) _destroy;
  bool _disposed = false;

  String get _prefix;

  _FrameDecoder() {
    _lib = _loadLibrary();
    _create = _lib.lookupFunction<_DecCreateNative, _DecCreate>(
        'glint_${_prefix}_dec_create');
    _decode = _lib.lookupFunction<_DecodeNative, _Decode>(
        'glint_${_prefix}_decode');
    _frameInfo = _lib.lookupFunction<_FrameInfoNative, _FrameInfo>(
        'glint_${_prefix}_frame_info');
    _destroy = _lib.lookupFunction<
        Void Function(Pointer<Void>),
        void Function(Pointer<Void>)>('glint_${_prefix}_dec_destroy');
    _handle = _create();
    if (_handle == nullptr) {
      throw StateError('glint_${_prefix}_dec_create returned null');
    }
  }

  /// Decode a whole stream (walks frames, skips ID3v2). Returns
  /// interleaved float PCM.
  Float32List decode(Uint8List data) {
    _checkNotDisposed();
    var off = 0;
    if (data.length > 10 &&
        data[0] == 0x49 && data[1] == 0x44 && data[2] == 0x33) {
      final sz = ((data[6] & 0x7F) << 21) |
          ((data[7] & 0x7F) << 14) |
          ((data[8] & 0x7F) << 7) |
          (data[9] & 0x7F);
      off = 10 + sz;
    }
    final inPtr = calloc<Uint8>(data.length);
    inPtr.asTypedList(data.length).setAll(0, data);
    final outPtr = calloc<Float>(2 * 1152);
    final fi = calloc<GlintDecFrameInfo>();
    final acc = <double>[];
    try {
      while (off + 7 <= data.length) {
        if (_frameInfo((inPtr + off), data.length - off, fi) < 0) {
          off++;
          continue;
        }
        final fb = fi.ref.frameBytes;
        if (fb == 0 || off + fb > data.length) break;
        final n = _decode(_handle, (inPtr + off),
            data.length - off, outPtr, fi);
        if (n > 0) {
          final ch = fi.ref.channels == 0 ? 1 : fi.ref.channels;
          acc.addAll(outPtr.asTypedList(n * ch));
        }
        off += fb;
      }
    } finally {
      calloc.free(inPtr);
      calloc.free(outPtr);
      calloc.free(fi);
    }
    return Float32List.fromList(acc);
  }

  void dispose() {
    if (!_disposed) {
      _destroy(_handle);
      _disposed = true;
    }
  }

  void _checkNotDisposed() {
    if (_disposed) throw StateError('decoder has been disposed');
  }
}

/// MPEG-1/2 Layer III decoder.
class GlintMp3Decoder extends _FrameDecoder {
  @override
  String get _prefix => 'mp3';
}

/// ADTS AAC-LC decoder.
class GlintAacDecoder extends _FrameDecoder {
  @override
  String get _prefix => 'aac';
}
